# backend/src/app.js
@@ -14,6 +14,8 @@ import projectProposalRouter from "./routes/project-proposal.routes.js";
 import projectRoutes from "./routes/project.routes.js";
 import projectAccessRequestRouter from "./routes/project-access-request.routes.js";
 import recommendationRoutes from "./routes/recommendation.routes.js";
+import projectReviewCriteriaRoutes from "./routes/project-review-criteria.routes.js";
+import aiProposalReviewRoutes from "./routes/ai-proposal-review.routes.js";
 import notificationRoutes from "./routes/notification.routes.js";
 import dashboardRoutes from "./routes/dashboard.routes.js";
 
@@ -75,6 +77,9 @@ app.use("/api/v1/project-proposals", projectProposalRouter);
 
 app.use("/api/v1/projects", projectRoutes);
 app.use("/api/v1/projects", projectAccessRequestRouter);
+
+app.use("/api/v1/project-review-criteria", projectReviewCriteriaRoutes);
+app.use("/api/v1/ai-proposal-review/", aiProposalReviewRoutes);
 
 app.use("/api/v1/recommendations", recommendationRoutes);
 
